--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # Created by https://www.gitignore.io
 
+
+
 ### Bower ###
 bower_components
 .bower-cache
 .bower-registry
 .bower-tmp
-
 
 ### Node ###
 # Logs
@@ -23,14 +24,11 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
 # node-waf configuration
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+dist
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
