--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-haml": "^0.1.5",
     "gulp-imagemin": "^2.3.0",
+    "gulp-include": "^2.0.2",
     "gulp-jshint": "^1.11.2",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.0",
