--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
+    "gulp-babel": "^5.2.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-csscomb": "^3.0.6",
